# V4Hero

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  main.cpp  resource.rc  vcpkg-configuration.json  vcpkg.json
DiscordSDK/: ffi.h
Engine/: Binary.cpp  Binary.hpp  Config.cpp  Config.h  Constants.h  CoreManager.cpp  CoreManager.h  DebugOut.cpp  DebugOut.h  Drum.cpp  Drum.h  Func.cpp  Func.h  Obelisk.cpp  P4A.cpp  P4A.h  ResourceManager.cpp  ResourceManager.h  Rhythm.cpp  Rhythm.h  RhythmController.h  SaveFile.cpp  SaveFile.h  SaveReader.cpp  SaveReader.h  Song.cpp  Song.h  SongController.cpp  SongController.h  SoundManager.cpp  SoundManager.h  StateManager.cpp  StateManager.h  StringRepository.cpp  StringRepository.h  TextureManager.cpp  TextureManager.h  TipsUtil.cpp  TipsUtil.h  Utils.h  (+2 more)
Engine/Dialog/: ControlTips.cpp  ControlTips.h  DialogBox.cpp  DialogBox.h  DialogHandler.cpp  DialogHandler.h  MessageCloud.cpp  MessageCloud.h  RoundedRect.cpp  RoundedRect.h
Engine/Graphics/: AnimatedCurveShape.cpp  AnimatedCurveShape.h  ConcaveShape.cpp  ConcaveShape.h  CurveSegment.cpp  CurveSegment.h  CurveShape.cpp  CurveShape.h  Menu.cpp  Menu.h  PNGAnimation.cpp  PNGAnimation.h  PSprite.cpp  PSprite.h  PSpritesheet.cpp  PSpritesheet.h  PText.cpp  PText.h  PataText.cpp  PataText.h  RichText.cpp  RichText.hpp  Scene.cpp  Scene.h  ScreenFade.cpp  ScreenFade.h  SpriteWrapper.cpp  SpriteWrapper.h
Engine/Input/: InputController.cpp  InputController.h  MouseController.cpp  MouseController.h  TextInputController.cpp  TextInputController.h
Engine/Item/: Armour.cpp  Armour.h  Equipment.cpp  Equipment.h  InventoryData.cpp  InventoryData.h  InventoryItem.cpp  InventoryItem.h  Item.h  ItemRegistry.cpp  ItemRegistry.h  Mask.cpp  Mask.h  Weapon.cpp  Weapon.h
Engine/Math/: PVector.cpp  PVector.h
Engine/Mechanics/: Globals.h
Engine/Menu/: Altar.cpp  Altar.h  Barracks.cpp  Barracks.h  ButtonList.cpp  ButtonList.h  Credits.cpp  Credits.h  ErrorChamber.cpp  ErrorChamber.h  IntroductionMenu.cpp  IntroductionMenu.h  LoadingTip.cpp  LoadingTip.h  MainMenu.cpp  MainMenu.h  MainMenuButtonList.cpp  MainMenuButtonList.h  MaterOuter.cpp  MaterOuter.h  MenuButton.cpp  MenuButton.h  NewGameMenu.cpp  NewGameMenu.h  NewGameNameEntryMenu.cpp  NewGameNameEntryMenu.h  Obelisk.cpp  Obelisk.h  OptionsButtonList.cpp  OptionsButtonList.h  OptionsMenu.cpp  OptionsMenu.h  Patapolis.cpp  Patapolis.h  SaveFileCreated.cpp  SaveFileCreated.h  TestChamber.cpp  TestChamber.h
Engine/Menu/ButtonLists/: MainMenuButtonList.cpp  MainMenuButtonList.h  NameEntryButtonList.cpp  NameEntryButtonList.h  NewGameMenuButtonList.cpp  NewGameMenuButtonList.h  ObeliskButtonList.cpp  ObeliskButtonList.h  OptionsButtonList.cpp  OptionsButtonList.h  SaveFileCreatedMenuButtonList.cpp  SaveFileCreatedMenuButtonList.h
Engine/Mission/: Background.cpp  Background.h  Camera.cpp  Camera.h  Mission.cpp  Mission.h  MissionController.cpp  MissionController.h  Patapon.cpp  Patapon.h  Wall.cpp  Wall.h  Weather.cpp  Weather.h
Engine/Mission/Units/: AnimatedObject.cpp  AnimatedObject.h  Behavior.cpp  Behavior.h  CollidableObject.cpp  CollidableObject.h  EndFlag.cpp  EndFlag.h  Entity.cpp  Entity.h  EntityList.h  FeverWorm.cpp  FeverWorm.h  Hatapon.cpp  Hatapon.h  Hitbox.cpp  Hitbox.h  HitboxFrame.cpp  HitboxFrame.h  Kacheek.cpp  Kacheek.h  Object.cpp  Object.h  PNGAnimation.cpp  PNGAnimation.h  Patapon.cpp  Patapon.h  PlayableUnit.cpp  PlayableUnit.h  PlayableUnitList.h  Projectile.cpp  Projectile.h  ProjectileList.h  Spear.cpp  Spear.h  Wall.cpp  Wall.h
Engine/Mission/Units/Entities/: DroppedItem.cpp  DroppedItem.h  EndFlag.cpp  EndFlag.h  FeverWorm.cpp  FeverWorm.h  Grass1.h  Grass2.h  Kacheek.cpp  Kacheek.h  Wall.cpp  Wall.h
Engine/Mission/Units/Projectiles/: Spear.cpp  Spear.h
Engine/Mission/Units/Unit/: DroppedItem.cpp  DroppedItem.h  (+8 more)
Engine/Pon/: Pon.cpp  Pon.h  PonRegistry.cpp  PonRegistry.h  Squad.cpp  Squad.h  SquadRegistry.cpp  SquadRegistry.h
Engine/Rhythm/: Drum.cpp  Drum.h  Rhythm.cpp  Rhythm.h  RhythmController.cpp  RhythmController.h  RhythmGUI.cpp  RhythmGUI.h  Song.cpp  Song.h  SongController.cpp  SongController.h
cmake/: FindDiscordSDK.cmake
include/: SongController.h
resources/: spoilers here!!! watch out!!!
resources/data/: anim_data.json  classes.json  commands.json  item_data.json  item_helper.txt  rarepons.json
resources/graphics/bg/: Guide to backgrounds.txt
resources/graphics/item/: README.txt
resources/graphics/mission/: damagesheet_H.spr  damagesheet_L.spr  damagesheet_M.spr  damagesheet_U.spr
resources/lang/: fonts.txt  lang.txt  languages.txt  str_BPT.txt  str_CN.txt  str_DEU.txt  str_ENG.txt  str_ENG_backup.txt  str_ESP.txt  str_FR.txt  str_IND.txt  str_ITA.txt  str_JP.txt  str_RUS.txt  str_SP.txt  str_UA.txt  str_VN.txt
resources/lang/us/: us.txt
resources/lang_backup/: str_BPT.txt  str_CN.txt  str_DEU.txt  str_ENG.txt  str_ESP.txt  str_FR.txt  str_IND.txt  str_ITA.txt  str_JP.txt  str_RUS.txt  str_SP.txt  str_VN.txt
resources/missions/: debug_0001.json  mis1_0.json  mis1_0.p4m  mis1_1.json  mis1_1.p4m  mis1_3_seasonal.json  mis2_1.json  mis2_2.json  mis2_2.p4m  mis3_1.json  mis3_2.json  mis4_1.p4m  worldmap.json
resources/sfx/bgm/: songList.ini
resources/sfx/menu/: LICENSE.txt
resources/units/: README.txt
resources/units/entity/: droppeditem.p4a  droppeditem.p4p  end_flag.p4a  end_flag.p4p  fever_worm.p4p  grass_1.p4a  grass_1.p4p  kacheek.p4p  kirajin.p4a  kirajin.p4p  kirajin_guardtower.p4a  kirajin_hut.p4a  kirajin_hut.p4p  kirajin_poweredtower_big.p4a  kirajin_poweredtower_big.p4p  kirajin_poweredtower_small.p4a  kirajin_poweredtower_small.p4p  rappata.p4a  rappata.p4p  rock_big.p4a  rock_big.p4p  rock_pile.p4a  rock_pile.p4p  rock_small.p4a  rock_small.p4p  secretary.p4a  secretary.p4p  treasure_chest.p4a  treasure_chest.p4p  wooden_spikes.p4a  wooden_spikes.p4p
resources/units/unit/: hatapon.p4a  ranpurupon.p4a  wakapon.p4a
testSFML/: config.ini  testSFML.cbp  testSFML.depend
tests/: test.cpp
tests/test-resources/: new_save.p4sv
(+77 files in other folders)
